# rehabos-backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/chat/: 09aeaa9069c95855.json  17ddcd085d90336c.json  2fdaef38b25efc45.json  5ecc42ebbaea7dd1.json  66e18fc008623bfc.json  6afc6721a5015537.json  746fcd624017cc34.json  795aca7efb1ccb24.json  85d2ac9d34e11dd2.json  a6a4e02a77fe4a10.json  a778c4cfd0a583f8.json  d65b9ab7a8c94d58.json  ea146b21ee69ae98.json
data/reports/: effectiveness_20260124.json  effectiveness_20260215.json
docs/: memu-namespaces.md
rehab_os/: __init__.py  config.py  main.py
rehab_os/agents/: __init__.py  base.py  diagnosis.py  documentation.py  evidence.py  orchestrator.py  outcome.py  plan.py  qa_learning.py  red_flag.py
rehab_os/api/: __init__.py  app.py  audit.py  dependencies.py  middleware.py  rate_limit.py
rehab_os/billing/: __init__.py  cpt_mapper.py  eight_minute_rule.py  engine.py  icd10_suggester.py
rehab_os/cli/: __init__.py  commands.py
rehab_os/clinical/: __init__.py  chronic_management.py  defensibility.py  drug_checker.py  evidence_engine.py
rehab_os/core/: __init__.py  auth.py  database.py  models.py  repository.py  schemas.py
rehab_os/dashboard/: __init__.py  app.py
rehab_os/encounter/: __init__.py  brain.py  memory.py  state.py
rehab_os/export/: __init__.py  pdf_generator.py
rehab_os/intake/: __init__.py  agent.py  extractor.py  pipeline.py
rehab_os/knowledge/: __init__.py  loader.py  (+3 more)
scripts/: setup.sh
tests/: __init__.py  conftest.py
(+98 files in other folders)
